--- a/templates/index_open.html
+++ b/templates/index_open.html
@@ -7,23 +7,24 @@
 </head>
 
 <body>
-    
-    <div id="title">
-        <div class="image-container">
-            <a href="/" class="image-link">
-                <img src="static/logo.png" alt="Image 1" class="logo1">
-            </a>
-        </div>
+    <header>
+        <div id="title">
+            <div class="image-container">
+                <a href="/" class="image-link">
+                    <img src="static/box3.jpg" alt="Image 1" class="logo1">
+                </a>
+            </div>
 
-        <!-- Login Button with text and image -->
-         
-        <div class="image-container">
-            <a href="/login" class="login-btn">
-                <img src="static/icon-profile.png" alt="Login" class="login-image"> <!-- Replace with your image URL -->
-                Login
-            </a>
+            <!-- Login Button with text and image -->
+            
+            <div class="image-container">
+                <a href="/login" class="login-btn">
+                    <img src="static/icon-profile.png" alt="Login" class="login-image"> <!-- Replace with your image URL -->
+                    Login
+                </a>
+            </div>
         </div>
-    </div>
+    </header>
 
     <!-- Welcome message and Login/Logout button -->
     <div id="welcome" class="welcome-message">
