--- a/templates/register.html
+++ b/templates/register.html
@@ -10,18 +10,24 @@
 </head>
 
 <body>
-    <div id="title">
-        <div class="image-container">
-            <a href="/" class="image-link">
-                <img src="static/logo.png" alt="Logo" class="logo1">
-            </a>
+    <header>
+        <div id="title">
+            <div class="image-container">
+                <a href="/" class="image-link">
+                    <img src="static/box3.jpg" alt="Image 1" class="logo1">
+                </a>
+            </div>
+
+            <!-- Login Button with text and image -->
+            
+            <div class="image-container">
+                <a href="/login" class="login-btn">
+                    <img src="static/icon-profile.png" alt="Login" class="login-image"> <!-- Replace with your image URL -->
+                    Login
+                </a>
+            </div>
         </div>
-        <div class="image-container right-align">
-            <a href="/login" class="image-link">
-                <img src="static/icon-profile.png" alt="Profile Icon" class="logo2">
-            </a>
-        </div>
-    </div>
+    </header>
 
     <div id="form">
         <h2>Create an Account</h2>
