--- a/templates/index_open.html
+++ b/templates/index_open.html
@@ -235,6 +235,13 @@
                 <p>Review your chat</p>
             </a>
         </div>
+        <div class="box">
+            <a href="/option5" class="box-link">
+                <img src="static/box3.jpg" alt="Option 5" class="box-image">
+                <h2>AI Photo Check</h2>
+                <p>Best Profil Photo</p>
+            </a>
+        </div>
     </div>
     <div class="page-views">
         <p>Total Page Views: {{ views }}</p>
